--- a/js_service/test/index.html
+++ b/js_service/test/index.html
@@ -2,5 +2,6 @@
   <body>
     <script src="../dist/main.js"></script>
     <script src="./test.js"></script>
+    <script src="./polket.js"></script>
   </body>
 </html>
